// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commit command guard should match guard 1`] = `
Object {
  "message": [Function],
  "scope": [Function],
  "title": [Function],
}
`;

exports[`commit command prompts with scope prompt should match the array of questions 1`] = `
Array [
  Object {
    "message": "Choose a gitmoji:",
    "name": "gitmoji",
    "source": [Function],
    "type": "autocomplete",
  },
  Object {
    "message": "Enter the scope of current changes:",
    "name": "scope",
    "validate": [Function],
  },
  Object {
    "message": "Enter the commit title",
    "name": "title",
    "transformer": [Function],
    "validate": [Function],
  },
  Object {
    "message": "Enter the commit message:",
    "name": "message",
    "validate": [Function],
  },
  Object {
    "message": "Issue / PR reference",
    "name": "refs",
  },
  Object {
    "message": "Co-authored-by (Separated by comma)",
    "name": "coAuthors",
  },
]
`;

exports[`commit command prompts without scope prompt should match the array of questions 1`] = `
Array [
  Object {
    "message": "Choose a gitmoji:",
    "name": "gitmoji",
    "source": [Function],
    "type": "autocomplete",
  },
  Object {
    "message": "Enter the commit title",
    "name": "title",
    "transformer": [Function],
    "validate": [Function],
  },
  Object {
    "message": "Enter the commit message:",
    "name": "message",
    "validate": [Function],
  },
  Object {
    "message": "Issue / PR reference",
    "name": "refs",
  },
  Object {
    "message": "Co-authored-by (Separated by comma)",
    "name": "coAuthors",
  },
]
`;

exports[`commit command withClient with autoAdd, signed commits and scope should call inquirer with prompts 1`] = `
Array [
  Array [
    Array [
      Object {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      Object {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      Object {
        "message": "Enter the commit message:",
        "name": "message",
        "validate": [Function],
      },
      Object {
        "message": "Issue / PR reference",
        "name": "refs",
      },
      Object {
        "message": "Co-authored-by (Separated by comma)",
        "name": "coAuthors",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      Object {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      Object {
        "message": "Enter the commit message:",
        "name": "message",
        "validate": [Function],
      },
      Object {
        "message": "Issue / PR reference",
        "name": "refs",
      },
      Object {
        "message": "Co-authored-by (Separated by comma)",
        "name": "coAuthors",
      },
    ],
  ],
]
`;

exports[`commit command withClient with no autoAdd and no signed commits and no scope should call inquirer with prompts 1`] = `
Array [
  Array [
    Array [
      Object {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      Object {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      Object {
        "message": "Enter the commit message:",
        "name": "message",
        "validate": [Function],
      },
      Object {
        "message": "Issue / PR reference",
        "name": "refs",
      },
      Object {
        "message": "Co-authored-by (Separated by comma)",
        "name": "coAuthors",
      },
    ],
  ],
]
`;

exports[`commit command withClient with the commit hook created should call inquirer with prompts 1`] = `
Array [
  Array [
    Array [
      Object {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      Object {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      Object {
        "message": "Enter the commit message:",
        "name": "message",
        "validate": [Function],
      },
      Object {
        "message": "Issue / PR reference",
        "name": "refs",
      },
      Object {
        "message": "Co-authored-by (Separated by comma)",
        "name": "coAuthors",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      Object {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      Object {
        "message": "Enter the commit message:",
        "name": "message",
        "validate": [Function],
      },
      Object {
        "message": "Issue / PR reference",
        "name": "refs",
      },
      Object {
        "message": "Co-authored-by (Separated by comma)",
        "name": "coAuthors",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      Object {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      Object {
        "message": "Enter the commit message:",
        "name": "message",
        "validate": [Function],
      },
      Object {
        "message": "Issue / PR reference",
        "name": "refs",
      },
      Object {
        "message": "Co-authored-by (Separated by comma)",
        "name": "coAuthors",
      },
    ],
  ],
]
`;
